force-app/main/default/objects/RegulatoryCodeViolation/RegulatoryCodeViolation.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>