force-app/main/default/objects/RegulatoryCodeViolation/fields/Archived_Regulatory_Decision__c.field-meta.xml
<CustomField>
    <fullName>Archived_Regulatory_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the regulatory decision has been archived</description>
    <label>Archived Regulatory Decision</label>
    <type>Checkbox</type>
</CustomField>