force-app/main/default/objects/RegulatoryCodeViolation/fields/Compliance_Rating_Stars__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Rating_Stars__c</fullName>
    <formula>IMAGE(
IF(ISPICKVAL(Service_Compliance_Rating_Effect__c,&quot;1 Star&quot;), &quot;/img/samples/stars_100.gif&quot;,
IF(ISPICKVAL(Service_Compliance_Rating_Effect__c,&quot;2 Star&quot;), &quot;/img/samples/stars_200.gif&quot;,
IF(ISPICKVAL(Service_Compliance_Rating_Effect__c,&quot;3 Star&quot;), &quot;/img/samples/stars_300.gif&quot;,
IF(ISPICKVAL(Service_Compliance_Rating_Effect__c,&quot;4 Star&quot;), &quot;/img/samples/stars_400.gif&quot;,
IF(ISPICKVAL(Service_Compliance_Rating_Effect__c,&quot;1 Star&quot;), &quot;/img/samples/stars_500.gif&quot;, &quot;/img/samples/stars_000.gif&quot;
))))),
&quot;Compliance Rating Stars&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Rating Stars</label>
    <type>Text</type>
</CustomField>