force-app/main/default/objects/RegulatoryCodeViolation/fields/Date_Decision_Applied__c.field-meta.xml
<CustomField>
    <fullName>Date_Decision_Applied__c</fullName>
    <label>Date Decision Applied</label>
    <type>Date</type>
</CustomField>