force-app/main/default/objects/RegulatoryCodeViolation/fields/Decision_Details__c.field-meta.xml
<CustomField>
    <fullName>Decision_Details__c</fullName>
    <label>Decision Details</label>
    <length>8000</length>
    <type>Html</type>
</CustomField>