force-app/main/default/objects/RegulatoryCodeViolation/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <length>8000</length>
    <type>Html</type>
</CustomField>