force-app/main/default/objects/RegulatoryCodeViolation/fields/Reason_for_issuing_Regulatory_Decision__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_issuing_Regulatory_Decision__c</fullName>
    <label>Reason for issuing Regulatory Decision</label>
    <length>8000</length>
    <type>Html</type>
</CustomField>