force-app/main/default/objects/RegulatoryCodeViolation/fields/Reg_Dec_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Reg_Dec_External_Id__c</fullName>
    <description>Used for regulatory decision upserts via dataloader</description>
    <externalId>true</externalId>
    <label>Reg Dec External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>