force-app/main/default/objects/RegulatoryCodeViolation/fields/RegDecisiontype_ext_Id__c.field-meta.xml
<CustomField>
    <fullName>RegDecisiontype_ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>RegDecisiontype ext Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>