force-app/main/default/objects/RegulatoryCodeViolation/fields/Regulatory_Decision_Code__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Decision_Code__c</fullName>
    <formula>ViolationType.RegDecTypeExtId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regulatory Decision Code</label>
    <type>Text</type>
</CustomField>