force-app/main/default/objects/RegulatoryCodeViolation/fields/Regulatory_Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Decision_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulatory Decision Type</label>
    <referenceTo>ViolationType</referenceTo>
    <relationshipLabel>Regulatory Decisions</relationshipLabel>
    <relationshipName>Regulatory_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>