force-app/main/default/objects/RegulatoryCodeViolation/fields/Related_Regulatory_Decision__c.field-meta.xml
<CustomField>
    <fullName>Related_Regulatory_Decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects version of the same Regulatory Decision</description>
    <label>Related Regulatory Decision</label>
    <referenceTo>RegulatoryCodeViolation</referenceTo>
    <relationshipLabel>Regulatory Code Violations</relationshipLabel>
    <relationshipName>Regulatory_Code_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>