force-app/main/default/objects/RegulatoryCodeViolation/fields/Removed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Removed_Reason__c</fullName>
    <description>Reason for Removing the Regulatory Decision</description>
    <label>Removed Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>