force-app/main/default/objects/RegulatoryCodeViolation/fields/SCR_Rating__c.field-meta.xml
<CustomField>
    <fullName>SCR_Rating__c</fullName>
    <description>calculated SCR rating for the record</description>
    <label>SCR Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Compliance_Rating_Effect</valueSetName>
    </valueSet>
</CustomField>