force-app/main/default/objects/RegulatoryCodeViolation/fields/Service_Account_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>test only</description>
    <label>Service Account Relationship</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Service_Account_Relationship__c.Provider_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Provider_Name_lookup__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Account_Relationship__c</referenceTo>
    <relationshipLabel>Regulatory Decisions</relationshipLabel>
    <relationshipName>Regulatory_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>