force-app/main/default/objects/RegulatoryCodeViolation/fields/Service_Compliance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Service_Compliance_Rating__c</fullName>
    <description>Service Compliance Rating for an individual Reg Dec</description>
    <label>Service Compliance Rating</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>