force-app/main/default/objects/RegulatoryCodeViolation/fields/Service_Compliance_Rating_Effect__c.field-meta.xml
<CustomField>
    <fullName>Service_Compliance_Rating_Effect__c</fullName>
    <label>Service Compliance Rating Effect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Compliance_Rating_Effect</valueSetName>
    </valueSet>
</CustomField>