force-app/main/default/objects/RegulatoryCodeViolation/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <description>Name of the Service to be Published</description>
    <label>Alternative Service Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>