force-app/main/default/objects/RegulatoryCodeViolation/fields/Service_Name_lookup__c.field-meta.xml
<CustomField>
    <fullName>Service_Name_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Name</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <errorMessage>Service care type is not Home Care or Residential</errorMessage>
        <filterItems>
            <field>BusinessLicense.Care_Type__c</field>
            <operation>contains</operation>
            <value>Home Care</value>
        </filterItems>
        <filterItems>
            <field>BusinessLicense.Care_Type__c</field>
            <operation>contains</operation>
            <value>Residential</value>
        </filterItems>
        <filterItems>
            <field>BusinessLicense.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Provider_Name_lookup__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Regulatory Decisions</relationshipLabel>
    <relationshipName>Regulatory_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>