force-app/main/default/objects/RegulatoryCodeViolation/fields/Service_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name__c</fullName>
    <description>Name of the Service Provider to be Published</description>
    <label>Alternative Service Provider Name</label>
    <length>130</length>
    <type>Text</type>
</CustomField>