force-app/main/default/objects/RegulatoryCodeViolation/fields/Service_Provider_Name_lookup__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regulatory Code Violations</relationshipLabel>
    <relationshipName>Regulatory_Code_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>