force-app/main/default/objects/RegulatoryCodeViolation/recordTypes/Regulatory_Decision.recordType-meta.xml
<RecordType>
    <fullName>Regulatory_Decision</fullName>
    <active>true</active>
    <label>Regulatory Decision</label>

</RecordType>