force-app/main/default/objects/RegulatoryCodeViolation/recordTypes/Regulatory_Decision_Lock.recordType-meta.xml
<RecordType>
    <fullName>Regulatory_Decision_Lock</fullName>
    <active>true</active>
    <description>used to lock screen after Publishing</description>
    <label>Regulatory Decision Lock</label>
</RecordType>