force-app/main/default/objects/RegulatoryCodeViolation/recordTypes/Regulatory_Decision_Unlock.recordType-meta.xml
<RecordType>
    <fullName>Regulatory_Decision_Unlock</fullName>
    <active>true</active>
    <label>Regulatory Decision Unlock</label>

</RecordType>