force-app/main/default/objects/RegulatoryCodeViolation/validationRules/BlankAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>BlankAccount</fullName>
    <active>true</active>
    <description>Lookup to Account should not be blank</description>
    <errorConditionFormula>ISBLANK( Service_Provider_Name_lookup__c )</errorConditionFormula>
    <errorDisplayField>Service_Provider_Name_lookup__c</errorDisplayField>
    <errorMessage>Account should not be blank</errorMessage>
</ValidationRule>