force-app/main/default/objects/RegulatoryCodeViolation/validationRules/BlankServiceAccountRelationship.validationRule-meta.xml
<ValidationRule>
    <fullName>BlankServiceAccountRelationship</fullName>
    <active>true</active>
    <description>Lookup to Service Account Relationship should not be blank</description>
    <errorConditionFormula>ISBLANK( Service_Account_Relationship__c )</errorConditionFormula>
    <errorDisplayField>Service_Account_Relationship__c</errorDisplayField>
    <errorMessage>Service Account Relationship should not be blank</errorMessage>
</ValidationRule>