force-app/main/default/objects/RegulatoryCodeViolation/validationRules/DateResolvedBeforeDateApplied.validationRule-meta.xml
<ValidationRule>
    <fullName>DateResolvedBeforeDateApplied</fullName>
    <active>true</active>
    <description>Date Decision Ends cannot be before Date Decision Applied</description>
    <errorConditionFormula>Date_Decision_Ends__c  &lt;   Date_Decision_Applied__c</errorConditionFormula>
    <errorDisplayField>DateResolved</errorDisplayField>
    <errorMessage>Date Decision Ends cannot be before Date Decision Applied</errorMessage>
</ValidationRule>