force-app/main/default/objects/RegulatoryCodeViolation/validationRules/NonCurrent_DateDecisionDateInThePast.validationRule-meta.xml
<ValidationRule>
    <fullName>NonCurrent_DateDecisionDateInThePast</fullName>
    <active>true</active>
    <description>For regulatory decisions where status = Non-Current, Date decision date must be in the past</description>
    <errorConditionFormula>ISPICKVAL(Status, &apos;Non-Current&apos;)  &amp;&amp;  Date_Decision_Ends__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Decision_Ends__c</errorDisplayField>
    <errorMessage>Date Decision Ends must be in the past</errorMessage>
</ValidationRule>