force-app/main/default/objects/RegulatoryCodeViolation/validationRules/Remove_Reason_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Remove_Reason_not_editable</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(NOT(ISPICKVAL(Status,&quot;Removed&quot;)),NOT(ISBLANK(Removed_Reason__c))), true, false)</errorConditionFormula>
    <errorDisplayField>Removed_Reason__c</errorDisplayField>
    <errorMessage>Removed Reason needs to be blank</errorMessage>
</ValidationRule>