force-app/main/default/objects/RegulatoryCodeViolation/validationRules/Removed_Reason_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Removed_Reason_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status,&quot;Removed&quot;), ISBLANK(Removed_Reason__c))</errorConditionFormula>
    <errorDisplayField>Removed_Reason__c</errorDisplayField>
    <errorMessage>Please enter Removed Reason</errorMessage>
</ValidationRule>