force-app/main/default/objects/RegulatoryCodeViolation/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name</columns>
    <columns>ViolationType</columns>
    <columns>Status</columns>
    <columns>Version__c</columns>
    <columns>LastModifiedDate</columns>
    <columns>CreatedDate</columns>
    <columns>Service_Name_lookup__c</columns>
    <columns>Service_Provider_Name_lookup__c</columns>
    <columns>Compliance_Rating_Stars__c</columns>
    <columns>Service_Compliance_Rating_Effect__c</columns>
    <columns>DateCreated</columns>
    <columns>Date_Decision_Ends__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>